fixtures/semantic/invalid/10-vr-s3-s4-surface-props.fl
component SurfaceProps {
  surface {
    text-color: token(color.text.primary)
    fill: token(color.surface.default)
    fill: token(color.surface.alt)
  }
}
